[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=1]
[ext_resource path="res://UI/window_style.tres" type="StyleBox" id=2]
[ext_resource path="res://Reward/RewardDomino.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ninepatchrect.png" type="Texture" id=4]
[ext_resource path="res://Fonts/MicroWhite.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Event/Shop.gd" type="Script" id=6]
[ext_resource path="res://Event/ShopItem.tscn" type="PackedScene" id=7]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
color = Color( 0.247059, 0.678431, 0.576471, 1 )

[node name="Status" type="Button" parent="Node2D"]
margin_left = 840.0
margin_top = 420.0
margin_right = 950.0
margin_bottom = 468.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Status"

[node name="Stack" type="Button" parent="Node2D"]
margin_left = 840.0
margin_top = 360.0
margin_right = 950.0
margin_bottom = 408.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Dominos"

[node name="Next" type="Button" parent="Node2D"]
margin_left = 840.0
margin_top = 480.0
margin_right = 950.0
margin_bottom = 528.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Continue"

[node name="Container" type="NinePatchRect" parent="Node2D"]
visible = false
margin_left = 712.0
margin_top = 30.0
margin_right = 928.0
margin_bottom = 310.0
rect_min_size = Vector2( 216, 280 )
texture = ExtResource( 4 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Node2D" parent="Node2D/Container" instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 274.0

[node name="GridContainer" type="GridContainer" parent="Node2D"]
margin_left = 40.0
margin_top = 40.0
margin_right = 680.0
margin_bottom = 440.0
columns = 4

[node name="Container1" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 148.0
margin_bottom = 128.0

[node name="Container2" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 152.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 128.0

[node name="Container3" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 304.0
margin_top = 0.0
margin_right = 452.0
margin_bottom = 128.0

[node name="Container4" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = 0.0
margin_right = 604.0
margin_bottom = 128.0

[node name="Container5" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 132.0
margin_right = 148.0
margin_bottom = 260.0

[node name="Container6" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 152.0
margin_top = 132.0
margin_right = 300.0
margin_bottom = 260.0

[node name="Container7" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 304.0
margin_top = 132.0
margin_right = 452.0
margin_bottom = 260.0

[node name="Container8" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = 132.0
margin_right = 604.0
margin_bottom = 260.0

[node name="Container9" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 264.0
margin_right = 148.0
margin_bottom = 392.0

[node name="Container10" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 152.0
margin_top = 264.0
margin_right = 300.0
margin_bottom = 392.0

[node name="Container11" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 304.0
margin_top = 264.0
margin_right = 452.0
margin_bottom = 392.0

[node name="Container12" parent="Node2D/GridContainer" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = 264.0
margin_right = 604.0
margin_bottom = 392.0

[node name="GemsText" type="RichTextLabel" parent="Node2D"]
margin_left = 12.0
margin_top = 12.0
margin_right = 52.0
margin_bottom = 52.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Gems"
text = "Gems"

[connection signal="pressed" from="Node2D/Status" to="Node2D" method="_on_Status_pressed"]
[connection signal="pressed" from="Node2D/Stack" to="Node2D" method="_on_Stack_pressed"]
[connection signal="pressed" from="Node2D/Next" to="Node2D" method="_on_Next_pressed"]
